# vpnelapsedtimer

./: CMakeLists.txt  LICENSE  README.md  main.c  resource.rc  vpnelapsedtimer.ini
src/: main.c  resource.h  resource.rc
test/: vpncli-test-1.bat  vpncli-test-2.bat  vpnui-test-1.bat
